# case-event

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  beginner.ipynb  env.yml  environment.yml  flakes.txt  proposal.txt  requirements.txt  requirements.yml
app/: __init__.py
flask_app/: __init__.py  app.py  requirements.txt
flask_app/tests/: test_api.py
lung_ai/: Augmentation.py  augmentation.py  data_extraction.py  data_fmt.py  data_gen.py  data_split.py  evaluate.py  featureExtraction.py  main.py  model.py  requirements.txt  rnn-tutorial.py  setup.cfg  train.py  validate.py
lung_ai/Data/: IBCHI_Challenge_diagnosis_v02.csv  readme.md
lung_ai/db/: IBCHI_Challenge_diagnosis.csv  diseases.txt
lung_ai/src/lungai/: add_model.py  ai.py  augmentation.py  data_cashe.py  data_extraction.py  data_gen.py  evaluate.py  force_cpu.py  load_model.py  main.py  model.py  paths.py  tf_config.py  train.py
lung_ai/tests/: test_ai.py  test_load_model.py
lung_ai/trained_models/dummy/: data_shape.tuple  label.dict  w.h5  w.index
