[metadata]
name = lungai
description = bla bla bla
author = Glenn, Vish, Henrik
license = MIT
licence_file = LICENSE
platforms = linux, win32
classsifiers = 
    Programing Language :: Python :: 3 :: 10

[options]
packages = 
    lungai
install_requires =
    tensorflow>=2.9
    librosa
    pandas
    
python_requires = >=3.10
package_dir =
    =src 
zip_safe = no